<resources>
    <string name="app_name">Lantern</string>
    <string name="action_settings">Settings</string>
    <string name="proxy_all_setting">Proxy all traffic</string>
    <string name="proxy_all_on_header">ON (Most secure option)</string>
    <string name="proxy_all_off_header">OFF (Fastest option)</string>
    <string name="proxy_all_on">With this option, all of your device traffic will be sent through %1$s</string>
    <string name="proxy_all_off">With this option off, only traffic to blocked sites will be sent through %1$s</string>
    <string name="button_text">Start</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="default_fragment">Default Fragment</string>
    <string name="receive_lantern">Receive Lantern desktop by email</string>
    <string name="lantern_desktop">Lantern Desktop</string>
    <string name="email_hint">Email</string>
    <string name="send_button">Send</string>
    <string name="send_desktop">Send Desktop</string>
    <string name="send_email">Send Email</string>
    <string name="your_email">Your Email</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="please_enter">Please enter, and confirm your email address.</string>
    <string name="please_enter_register">Please enter and confirm your email address to register your Lantern Pro Account.</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="select_issue">Please select an issue</string>
    <string name="select_issue_desc">Please leave us a brief description of your issue here,\nand we will get back to you ASAP.</string>
    <string name="submit">Submit</string>
    <string name="submit_issue">Submit Issue</string>
    <string name="no_issue_selected">Please select an issue before submitting a report</string>
    <string name="cannot_find_email">Oops! We\'re having trouble finding that email address.</string>
    <string name="no_purchase_date">Please select an approximate date when you purchased Lantern Pro</string>
    <string name="purchase_date">Purchase Date</string>
    <string-array name="common_issue_list">
        <item>Cannot access blocked sites</item>
        <item>Cannot complete purchase</item>
        <item>Cannot sign in</item>
        <item>Spinner loads endlessly</item>
        <item>Slow</item>
        <item>Other</item>
    </string-array>
    <string name="submit_code">Confirm Code</string>
    <string name="on_text">ON</string>
    <string name="off_text">OFF</string>
    <string name="lantern_off">Lantern is Off. Flip the switch to access blocked sites and services!</string>
    <string name="lantern_on">Lantern is On. You can now access blocked sites and services!</string>
    <string name="on_desc">You can now access\r\nblocked sites and services</string>
    <string name="off_desc">Click the button to access blocked sites and services</string>
    <string name="service_connected">"Connected to VPN"</string>
    <string name="desktop_option">Desktop Version</string>
    <string name="contact_option">Contact</string>
    <string name="check_for_update">Check for Update</string>
    <string name="no_update_available">You\'re up to date!</string>
    <string name="error_checking_for_update">Error checking for new version of %1$s</string>
    <string name="error_making_purchase">Error trying to make purchase</string>
    <string name="have_latest_version">%1$s %2$s is the newest version available.</string>
    <string name="updating_lantern">Updating %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="newsfeed_option">Try Lanten Feed</string>
    <string name="newsfeed_off_option">Turn off Feed</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_option">Share</string>
    <string name="quit_option">Quit</string>
    <string name="share_email_native"></string>
    <string name="share_email_subject">Lantern Android</string>
    <string name="fatal_error">Lantern encountered a fatal error and is no longer running</string>
    <string name="share_twitter">Check out Lantern Android: https://bit.ly/lanternapk</string>
    <string name="share_facebook">I\'m using Lantern for Android, it\'s available here: https://bit.ly/lanternapk</string>
    <string name="share_email_gmail">I\'m using Lantern for Android, and I\'ve attached the APK file!</string>
    <string name="share_sms">I\'m using Lantern for Android, download it here: https://bit.ly/lanternapk</string>
    <string name="share_chooser_text">Share Lantern Android</string>
    <string name="card">Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="Alipay">Alipay</string>
    <string name="alipay_account">Alipay account</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="success_email">Lantern Desktop has been e-mailed to you!</string>
    <string name="error_email">There was a problem sending you %1$s Desktop. Please try again later.</string>
    <string name="send_logs">Send Logs</string>
    <string name="help_survey">Help make Lantern better, take this one question survey now!</string>
    <string name="take_survey">Take Survey!</string>
    <string name="thanks_survey">Thanks for taking our survey!\n</string>
    <string name="success_log_email">Logs submitted successfully to %1$s!</string>
    <string name="error_log_email">Error sending logs to %1$s. Please try again later.</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="error_payment_gateway">Error contacting payment gateway</string>
    <string name="emails_do_not_match">Email fields do not match</string>
    <string name="invalid_reseller_code">The reseller code you entered is invalid</string>
    <string name="invalid_referral_code">Invalid referral code</string>
    <string name="invalid_voucher_code">Invalid voucher code</string>
    <string name="cannot_use_own_referral_code">Cannot use your own referral code for promotion</string>
    <string name="no_internet_connection">No Internet connection available!</string>
    <string name="unable_remove_device">Unable to remove device. Please try again later!</string>
    <string name="remove">Remove</string>
    <string name="contact_email">team@getlantern.org</string>
    <string name="contact_message">Help Me</string>
    <string name="contact_subject">Lantern Android</string>
    <string name="update_available">A new version of %1$s is available! Would you like to upgrade now?</string>
    <string name="not_now">Not Now</string>
    <string name="install_update">Update</string>
    <string name="error_update">Error Downloading Update</string>
    <string name="loading">Loading..</string>
    <string name="manual_update">Try manually installing the latest version from &lt;a href="https://lantern-android.io">here1&lt;/a></string>
    <string name="pro_welcome_text">Welcome to Lantern Pro!</string>
    <string name="happy_anniversary">HAPPY LANTERN ANNIVERSARY!</string>
    <string name="welcome_greeting">Welcome to Lantern</string>
    <string name="upgrade_for">Upgrade for ultimate\n speed &amp; stability</string>
    <string name="what_kind_of_lantern">What kind of Lantern\n would you like?</string>
    <string name="lantern_pro_radio">Lantern Pro - Unlimited Data</string>
    <string name="lantern_free_radio">Lantern Basic - 500MB Data</string>
    <string name="welcome_to_lantern">Welcome to the new and improved Lantern</string>
    <string name="to_get_unlimited">To get unlimited data, ultimate speeds and even stronger blocking resistance\nUPGRADE to Pro!</string>
    <string name="renew_pro_account">Renew Pro Account</string>
    <string name="logout">Log out</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="pro_account_expires">Your Pro account expires on %1$s</string>
    <string name="includes_free_months">This includes your %2$d bonus months!</string>
    <string name="verified_phone_number">Verified Phone Number:</string>
    <string name="devices_authorized">Devices authorized to use your Pro account</string>
    <string name="send_us_your_logs">Send us your Logs</string>
    <string name="thanks_purchase">Thanks for your purchase of Lantern Pro!</string>
    <string name="start_inviting">\r\nStart inviting!</string>
    <string name="sending_request">Processing request</string>
    <string name="invite_friends">Enter your e-mail to receive a code to share with your friends. Get a free month of PRO when they sign up!</string>
    <string name="invite_friends_welcome">When your friends purchase the two-year plan you will each get 3 months free, the one-year plan gets you each 1 month free</string>
    <string name="invite_friends_btn">Invite Friends</string>
    <string name="authorize_device_pro">Authorize Device for Pro</string>
    <string name="i_have_another">I have another Lantern Pro device</string>
    <string name="link_this_device">Link This Device</string>
    <string name="or">OR</string>
    <string name="need_to_recover">I need to recover my Lantern Pro account</string>
    <string name="start_recovery">Start Recovery</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="account_recovery_code">Account Recovery Code</string>
    <string name="email_recovery_code">An email with a recovery code has been sent to %1$s if this account exists. Input the code from that email above. This email may take several hours to arrive.</string>
    <string name="check_spam_folder">* Please check your spam folder if you do not receive the email</string>
    <string name="resend_email">Re-send Email</string>
    <string name="dont_remember">Don\'t Remember your Email?</string>
    <string name="device_code">Device Linking Code</string>
    <string name="link_this_device_0">To link this device to your Pro account:</string>
    <string name="link_this_device_1"><b>1.</b> Open the \'Add Device\' menu item on your Pro device.</string>
    <string name="link_this_device_2"><b>2.</b> Enter the device linking code and submit.</string>
    <string name="make_sure_updated">* Make sure you are updated to the latest version of Lantern on your Pro device.</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="renew_today">RENEW TODAY!</string>
    <string name="receive_free_yinbi">Receive Free Yinbi Cryptocurrency!</string>
    <string name="purchased_pro_activation_codes">Purchased Lantern Pro activation codes online?</string>
    <string name="renew_grab_free_yinbi"><u>Renew using your Pro activation codes to grab free Yinbi</u></string>
    <string name="renew">RENEW!</string>
    <string name="privacy_disclosure_title">Lantern Privacy Disclosure</string>
    <string name="privacy_disclosure_accept">I Accept</string>
    <string name="privacy_disclosure_body">Lantern is committed to protecting your privacy. We want you to understand what information we collect, what we don’t collect, and how we collect, use, and store information. We disassociate your payment information with your Lantern Pro account. We do not collect logs of your activity, including no logging of browsing history, traffic destination, data content, or DNS queries. We also never store connection logs, meaning no logs of your IP address, your outgoing Lantern server IP address associated with the connection timestamp, or session duration. Given a specific Lantern Pro account, Lantern is technically unable to associate the Lantern account with the real identity of the user. Given a Lantern IP address and a precise time-stamp, Lantern is technically unable to attribute this IP address to a Lantern user or a Lantern user IP address.</string>
</resources>