<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="@color/accent_white"
    android:layout_gravity="center_vertical"
    android:id="@+id/linkDeviceView"
    tools:context=".LinkDeviceActivity">

    <fragment
        xmlns:lantern="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titlebar_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        class="org.lantern.app.fragment.TitleBar"
        lantern:titleBackgroundColor="@drawable/nav_background_white"
        lantern:titleText="@string/authorize_device_pro"/>

    <TextView
        android:id="@+id/haveAnotherDevice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/i_have_another"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/linkThisDevice"
        android:layout_height="36dp"
        android:layout_width="216dp"
        android:layout_marginTop="20dp"
        android:text="@string/link_this_device"
        android:fontFamily="sans-serif-medium"
        android:textSize="14sp"
        android:elevation="2dp"
        android:minHeight="48dp"
        android:textColor="@color/accent_white"
        android:clickable="true"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/send_btn"
        android:onClick="linkDevice" /> 


    <TextView
        android:id="@+id/orText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/or"
        android:textSize="38sp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/needToRecover"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/need_to_recover"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/auth_device_view"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/accountInput"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:background="@null"
            android:drawableLeft="@drawable/person"
            android:drawablePadding="10dip"
            android:hint="@string/enter_email"
            android:textColorHint="@color/alipayEditText"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:autoText="false"
            android:paddingBottom="5dp"
            android:gravity="fill_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="textEmailAddress" />

        <View
            android:id="@+id/separator"
            android:background="@color/edittext_color"
            android:layout_below="@+id/email"
            android:layout_width = "275dp"
            android:layout_gravity="center"
            android:layout_height="1.5dip"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical ="true"
            android:layout_alignParentTop="true"
            />
    </LinearLayout>

    <Button
        android:id="@+id/startRecovery"
        android:layout_height="36dp"
        android:layout_width="216dp"
        android:layout_marginTop="20dp"
        android:text="@string/start_recovery"
        android:fontFamily="sans-serif-medium"
        android:textSize="14sp"
        android:elevation="2dp"
        android:minHeight="48dp"
        android:textColor="@color/accent_white"
        android:clickable="true"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/send_btn"
        android:onClick="linkDevice" />

    <TextView
        android:id="@+id/dontRemember"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:text="@string/dont_remember"
        android:textSize="14sp"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textColor="@color/black"/>

</LinearLayout>
