<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@color/accent_white"
    android:id="@+id/recoveryCodeView"
    tools:context=".RecoveryCodeActivity">

    <fragment
        xmlns:lantern="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titlebar_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        class="org.getlantern.lantern.fragment.TitleBar"
        lantern:titleBackgroundColor="@drawable/nav_background_white"
        lantern:titleText="@string/account_recovery"/>

    <LinearLayout
        android:id="@+id/auth_device_view"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:padding="20dp"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/codeInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="number"
            android:drawableLeft="@drawable/vcode"
            android:drawablePadding="10dip"
            android:hint="@string/account_recovery_code"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14dp"
            android:autoText="false"
            android:paddingBottom="5dp"
            android:gravity="fill_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:id="@+id/separator"
            android:background="@color/edittext_color"
            android:layout_below="@+id/email"
            android:layout_width = "wrap_content"
            android:layout_gravity="center"
            android:layout_height="1.5dip"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical ="true"
            android:layout_alignParentTop="true"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailWithRecoveryCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:layout_gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/email_recovery_code"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/checkSpam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/check_spam_folder"
        android:textSize="14sp"
        android:gravity="left"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/submit"
        android:layout_height="36dp"
        android:layout_width="216dp"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/MediumText"
        android:textSize="14sp"
        android:elevation="2dp"
        android:minHeight="48dp"
        android:textAllCaps="true"
        android:textColor="@color/accent_white"
        android:textStyle="bold"
        android:clickable = "true"
        android:background="@color/pink"
        android:layout_centerInParent="true"
        android:onClick="verifyCode" />

    <Button
        android:id="@+id/resendEmail"
        android:layout_height="36dp"
        android:layout_width="216dp"
        android:text="@string/resend_email"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/MediumText"
        android:textSize="14sp"
        android:minHeight="48dp"
        android:textAllCaps="true"
        android:textColor="@color/pink"
        android:textStyle="bold"
        android:clickable = "true"
        android:background="@drawable/text_invite"
        android:layout_centerInParent="true"
        android:onClick="resendEmail" />

</LinearLayout>
