<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="@color/accent_white"
    android:id="@+id/linkDeviceView"
    tools:context=".LinkDeviceActivity">

    <fragment
        xmlns:lantern="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titlebar_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        class="org.getlantern.lantern.fragment.TitleBar"
        lantern:titleBackgroundColor="@drawable/nav_background_white"
        lantern:titleText="@string/authorize_device_pro"/>

    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlebar_fragment"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:background="@color/accent_white">

        <ImageView
            android:id="@+id/account_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="38dp"
            android:src="@drawable/account_management"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/deviceCodeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_code"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/gray_device_link"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/deviceLinkingCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MediumText"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text=""
            android:textSize="37sp"
            android:textStyle="bold"
            android:textColor="@color/buy_pro"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/linkThisDevice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MediumText"
            android:text="@string/link_this_device_0"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:lineSpacingExtra="5dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/linkThisDevice1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_this_device_1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:lineSpacingExtra="5dp"
                android:gravity="left"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/linkThisDevice2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_this_device_2"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="5dp"
                android:gravity="left"
                android:textSize="14sp"
                android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/makeSureUpdated"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_sure_updated"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="5dp"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>
