<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyDisclosureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/accent_white"
        android:baselineAligned="false"
        android:gravity="left"
        android:id="@+id/privacyDisclosureView"
        android:paddingLeft="33dp"
        android:paddingRight="31dp"
        android:paddingTop="24dp"
        android:paddingBottom="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:lineSpacingExtra="8sp"
            android:layout_marginBottom="15dp"
            android:text="@string/privacy_disclosure_title"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:lineSpacingExtra="9sp"
            android:layout_marginBottom="24dp" 
            android:text="@string/privacy_disclosure_body"
            android:textColor="@color/black"/>

        <Button
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/privacy_disclosure_accept"
            android:textAppearance="@style/MediumText"
            android:textSize="14sp"
            android:lineSpacingExtra="5sp"
            android:textAllCaps="true"
            android:textColor="@color/accent_white"
            android:clickable = "true"
            android:background="@drawable/material_button"
            android:onClick="acceptTerms" />

    </LinearLayout>
</ScrollView>