<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/renewProSection"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pro_blue_color"
        android:paddingTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/progressBarView"
            android:layout_toLeftOf="@+id/upgradeBtn"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/renewToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:clickable="false"
                android:lineSpacingExtra="-2sp"
                android:text="@string/renew_today"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/accent_white"/>

            <TextView
                android:id="@+id/receiveFreeYinbi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:clickable="false"
                android:text="@string/receive_free_yinbi"
                android:textSize="10sp"
                android:textColor="@color/accent_white"/>
        </LinearLayout>
        <Button
            android:id="@+id/renewBtn"
            android:layout_height="36dp"
            android:layout_width="88dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:layout_below="@+id/progressBarView"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:text="@string/renew"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textColor="@color/accent_white"
            android:clickable="true"
            android:background="@color/pink"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone"
        android:id="@+id/bulkRenewSection"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/accent_white"
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal"
            android:text="@string/purchased_pro_activation_codes"
            />
        <TextView
            android:id="@+id/bulkRenew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/accent_white"
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal"
            android:text="@string/renew_grab_free_yinbi"
            />
    </LinearLayout>

</LinearLayout>
